# vigil

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  VERSIONING.md  Vigil Chaos Engineering copy.md  deny.toml  setup.sh
.cargo/: audit.toml
.github/workflows/: ci.yml  fuzz-moab.yml  fuzz-smoke.yml  pkg-build.yml  release.yml  scheduled.yml  weekly-fuzz.yml
aur/: .SRCINFO  PKGBUILD  vigil-baseline.install
benches/: benchmarks.rs
config/: vigil.toml
contrib/: vigild.service
docs/: ACKNOWLEDGMENTS.md  ARCHITECTURE.md  ATTEST.md  AUDIT_HMAC_FORMAT.md  AUDIT_NOTES.md  CLI.md  CONFIGURATION.md  COOKBOOK.md  COPY_FAIL_EXECUTIVE_SUMMARY.md  COPY_FAIL_VERIFICATION_REPORT.md  DEVELOPMENT.md  FAQ.md  FORENSICS.md  INSTALL.md  MINIMUM_VIABLE.md  NOTIFICATIONS.md  PACKAGING.md  PRINCIPLES.md  QUICKSTART.md  README.md  RELEASING.md  RESILIENCE.md  RETENTION.md  SECURITY.md  TESTING.md  THREAT_MODEL.md  TROUBLESHOOTING.md  UNSAFE_AUDIT.md  VULNERABILITIES.md
docs/diagrams/: README.md  audit-chain.md  baseline-schema.md  control-socket.md  coordinator-split.md  daemon-state-machine.md  event-flow.md  module-dependency-graph.md  system-overview.md  thread-topology.md  trust-boundaries.md  wal-consumers.md  wal-format.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_attest_file.rs  fuzz_attest_verify.rs  fuzz_audit_hmac_collision.rs  fuzz_baseline_compare.rs  fuzz_config_parse.rs  fuzz_db_roundtrip.rs  fuzz_event_filter.rs  fuzz_fanotify_fid_decode.rs  fuzz_scanner.rs  fuzz_toml_config.rs  fuzz_wal_recovery.rs  fuzz_xattr_parsing.rs
hooks/apt/: 99vigil  apt-post.sh  apt-pre.sh
hooks/dnf/: vigil.conf  vigil.py
hooks/pacman/: vigil-post.hook  vigil-pre.hook
licenses/: CONTRIBUTOR-LICENSE.md  DEPENDENCY-AUDIT.md  LICENSE-COMMERCIAL.md  LICENSE-DOCS.md  LICENSING.md  README.md  THIRD-PARTY-LICENSES
man/: vigil.toml.5.in
pkg/: README.md  build.sh
scripts/: fix-debian-deps.sh  test-all.sh
src/: ack.rs  baseline_diff.rs  bloom.rs  check_builder.rs  cli.rs  compare.rs  config.rs  control.rs  control_recover_tests.rs  coordinator.rs  daemon.rs  detection.rs  doctor.rs  error.rs  hash.rs  hmac.rs  lib.rs  main.rs  metrics.rs  package.rs  receipt.rs  scan_scheduler.rs  scanner.rs  supervised_thread.rs  types.rs  vigild.rs  watch_index.rs  worker.rs
src/alert/: dbus.rs  journal.rs  json_log.rs  mod.rs  remote_syslog.rs  router.rs  socket.rs  webhook.rs
src/attest/: create.rs  diff.rs  error.rs  format.rs  key.rs  list.rs  mod.rs  show.rs  verify.rs
src/baseline/: hash.rs  metadata.rs  mod.rs
src/commands/: ack.rs  alerts.rs  attest.rs  audit.rs  baseline.rs  check.rs  common.rs  config.rs  diff.rs  doctor.rs  explain.rs  hooks.rs  init.rs  inspect.rs  log.rs  maintenance.rs  man.rs  mod.rs  recover.rs  selftest.rs  setup.rs  status.rs  test_alert.rs  update.rs  watch.rs  welcome.rs  why.rs  why_silent.rs
src/commands/update/: mod.rs
src/config/: diff.rs  mod.rs
src/coordinator/: expectation.rs  mod.rs
src/daemon/: mod.rs
src/db/: access.rs  audit_ack.rs  audit_ops.rs  audit_path.rs  audit_retention.rs  baseline_ops.rs  migrate.rs  mod.rs  ops.rs  schema.rs
src/display/: check.rs  explain.rs  format.rs  mod.rs  term.rs  time.rs  widgets.rs
src/doctor/: checks.rs  mod.rs  recovery.rs  recovery_builder.rs
src/doctor/acknowledgment/: mod.rs  note.rs  types.rs
src/filter/: exclusion.rs  mod.rs
src/monitor/: fanotify.rs  filter.rs  inotify.rs  mod.rs
src/types/: alert.rs  baseline.rs  change.rs  config_types.rs  content.rs  event.rs  identity.rs  mod.rs  permissions.rs  security.rs  snapshot.rs
src/ui/: mod.rs  progress.rs
src/util/: canonical_cbor.rs  fs_walk.rs  journald.rs  mod.rs  owned_fd.rs  process.rs  random.rs  system.rs
src/wal/: audit_writer.rs  mod.rs  sink_runner.rs
systemd/: vigil-scan.service  vigil-scan.timer  vigild.service
tests/: README.md  acknowledgment_tests.rs  alert_dispatcher_tests.rs  architecture_invariants_test.rs  attest_tests.rs  audit_chain_tests.rs  audit_chain_v1_v2_mixed.rs  audit_hmac_collision_resistance.rs  audit_retention_tests.rs  baseline_json_tests.rs  baseline_refresh_audit_preservation_tests.rs  baseline_refresh_audit_tests.rs  baseline_tamper_tests.rs  chaos.rs  config_cli_tests.rs  control_status_reports_userspace_drops.rs  daemon_smoke_tests.rs  doctor_output_tests.rs  exclusion_filter_tests.rs  fanotify_fid_tier_tests.rs  fanotify_tier_probe_tests.rs  filter_self_paths_tests.rs  hmac_chain_tamper_tests.rs  hook_failure_isolation_tests.rs  integration.rs  integration_disambiguation.rs  refresh_toctou_coordination_tests.rs  scan_deleted_file_tests.rs  security.rs  security_hardening_v3_tests.rs  self_monitoring_tests.rs  snapshot_diff_tests.rs  version_upgrade_tests.rs  wal_integration.rs  worker_tests.rs
tests/chaos/: chaos_common.rs  harness.rs  mod.rs
tests/chaos/scenarios/: clock_warfare.rs  config_reload_storm.rs  coordinated_attack.rs  coordinator_adversarial_tick.rs  mod.rs  pipeline_recovery.rs  sink_determinism.rs  userspace_drop_compensating_scan.rs  wal_concurrency.rs  worker_pool_chaos.rs
tests/common/: assertions.rs  fixtures.rs  mod.rs
tests/exploits/copy_fail/: .gitignore  Cargo.toml  README.md
tests/exploits/copy_fail/kmod/: Makefile  vigil_inject_uapi.h  vigil_pcache_inject.c
tests/exploits/copy_fail/reports/: .gitkeep
tests/exploits/copy_fail/src/: fixture.rs  kmod_inject.rs  main.rs  poison.rs  report.rs
tests/integration/: audit_chain_tests.rs  baseline_tests.rs  comparison_tests.rs  config_tests.rs  daemon_tests.rs  db_tests.rs  filter_tests.rs  mod.rs  snapshot_tests.rs
tests/integration/snapshots/: integration__snapshot_tests__alert_json.snap  integration__snapshot_tests__baseline_export.snap  integration__snapshot_tests__diff_output.snap
tests/security/: integrity_tests.rs  mod.rs  permission_tests.rs  property_tests.rs  race_tests.rs
