[package]
name = "vigil"
version = "0.16.2"
edition = "2021"
description = "Lightweight file integrity monitor for Linux desktops"
license = "GPL-3.0-only"
authors = ["loujr"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

[features]
default = []
parallel = ["rayon"]

[[bin]]
name = "vigil"
path = "src/main.rs"

[[bin]]
name = "vigild"
path = "src/daemon.rs"

[dependencies]
# Hashing
blake3 = { version = "1", features = ["mmap"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Config
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }

# Linux syscalls
nix = { version = "0.28", features = [
    "event",
    "fs",
    "inotify",
    "mount",
    "poll",
    "process",
    "signal",
    "user",
] }

# Threading / channels
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Logging (tracing only — no log crate bridge)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# HMAC / integrity
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Pattern matching (compiled automaton)
globset = "0.4"

# Lock-free config swap
arc-swap = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Extended attributes
xattr = "1"

# libc for direct syscalls (fanotify, ioprio, setpriority)
libc = "0.2"

# Byte order / misc
thiserror = "1"

# systemd watchdog
sd-notify = "0.4"

# Parallel scanning (optional)
rayon = { version = "1", optional = true }

# LRU cache for baseline lookups
lru = "0.16.3"

# Cron schedule parsing for scheduled scans
croner = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
filetime = "0.2"
insta = { version = "1", features = ["json"] }
proptest = { version = "1", default-features = false, features = ["std"] }
tempfile = "3"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
strip = true
