[package]
name = "vigil-baseline"
version = "1.8.2"
edition = "2021"
rust-version = "1.85"
description = "Linux file integrity monitor. Kernel-level filesystem watching, BLAKE3 hashing, HMAC-chained audit trail. Silent by default, local by design, deeply paranoid."
# Vigil Baseline is dual-licensed: GPL-3.0-only for open-source use,
# or Commercial License for proprietary use. See licenses/LICENSE-COMMERCIAL.md
license = "GPL-3.0-only"
authors = ["loujr"]
repository = "https://github.com/lousclues-labs/vigil"
homepage = "https://vigilbaseline.com"
documentation = "https://github.com/lousclues-labs/vigil#documentation"
readme = "README.md"
keywords = ["filesystem-hashing", "file-integrity", "filesystem-integrity", "file-hashing", "folder-hashing"]
categories = ["command-line-utilities", "filesystem"]
exclude = [
    "aur/",
    ".github/",
    "contrib/",
    "docs/",
    "fuzz/",
    "scripts/",
    "systemd/",
    "tests/exploits/",
    "deny.toml",
    "setup.sh",
    "CONTRIBUTING.md",
    "GOVERNANCE.md",
    "TRADEMARKS.md",
    "VERSIONING.md",
    "THIRD_PARTY_NOTICES.md",
    "licenses/",
    "/config/",
    "vigil-baseline-*",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

[features]
default = []
# Tests that require root for page-cache control (drop_caches, fadvise + mincore).
# Skipped cleanly when not running as root.
root-tests = []

[[bin]]
name = "vigil"
path = "src/main.rs"

[[bin]]
name = "vigild"
path = "src/vigild.rs"

[lib]
name = "vigil"
path = "src/lib.rs"

[dependencies]
# Hashing
blake3 = { version = "1", features = ["mmap"] }
constant_time_eq = ">=0.3, <0.4.3"  # pin below 0.4.3 which requires rustc 1.95

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Config
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Linux syscalls
nix = { version = "0.28", features = [
    "event",
    "fs",
    "inotify",
    "mount",
    "poll",
    "process",
    "signal",
    "user",
] }

# Threading / channels
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Logging (tracing only -- no log crate bridge)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# HMAC / integrity
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Pattern matching (compiled automaton)
globset = "0.4"

# Lock-free config swap
arc-swap = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Extended attributes
xattr = "1"

# libc for direct syscalls (fanotify, ioprio, setpriority)
libc = "0.2"

# Byte order / misc
thiserror = "1"

# systemd watchdog
sd-notify = "0.4"


# LRU cache for baseline lookups
lru = "0.16.3"

# Cron schedule parsing for scheduled scans
croner = "2"

# Secure memory zeroization for key material
zeroize = "1"

# CBOR deterministic encoding for attestations (RFC 8949 §4.2)
ciborium = "0.2"

# Atomic file creation (unique temp names for concurrent writers)
tempfile = "3"

# WAL serialization
rmp-serde = "1"
crc32fast = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
filetime = "0.2"
insta = { version = "1", features = ["json"] }
proptest = { version = "1", default-features = false, features = ["std"] }
tempfile = "3"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
strip = true
