[package]
name = "vigil-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
vigil = { path = ".." }
arbitrary = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"

[[bin]]
name = "fuzz_config_parse"
path = "fuzz_targets/fuzz_config_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_baseline_compare"
path = "fuzz_targets/fuzz_baseline_compare.rs"
test = false
doc = false

[[bin]]
name = "fuzz_scanner"
path = "fuzz_targets/fuzz_scanner.rs"
test = false
doc = false

[workspace]
members = ["."]
