[package]
name = "vigil-baseline-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
vigil = { path = "..", package = "vigil-baseline" }
arbitrary = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
hex = "0.4"
rmp-serde = "1"

[[bin]]
name = "fuzz_config_parse"
path = "fuzz_targets/fuzz_config_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_baseline_compare"
path = "fuzz_targets/fuzz_baseline_compare.rs"
test = false
doc = false

[[bin]]
name = "fuzz_scanner"
path = "fuzz_targets/fuzz_scanner.rs"
test = false
doc = false

[[bin]]
name = "fuzz_toml_config"
path = "fuzz_targets/fuzz_toml_config.rs"
test = false
doc = false

[[bin]]
name = "fuzz_event_filter"
path = "fuzz_targets/fuzz_event_filter.rs"
test = false
doc = false

[[bin]]
name = "fuzz_db_roundtrip"
path = "fuzz_targets/fuzz_db_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "fuzz_xattr_parsing"
path = "fuzz_targets/fuzz_xattr_parsing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_wal_recovery"
path = "fuzz_targets/fuzz_wal_recovery.rs"
test = false
doc = false

[workspace]
members = ["."]
